--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class="img-box" id="log"><h3>Login</h3></div>
             <div class="img-box" id="who"><h3>Quien Soy</h3></div>
         </div>
+        <div> Hello my name is Cacorro</div>
     </div>
     <script src="script.js"></script>
 </body>
