--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <div class="img-box" id="log"><h3>Login</h3></div>
             <div class="img-box" id="who"><h3>Quien Soy</h3></div>
         </div>
-        <div> Hello my name is Cacorro</div>
+        <div> Hello my name is Brayan Duran Peruvian president</div>
+        <div> Hello my name is Checho chileno lider de la republica del peru</div>
     </div>
     <script src="script.js"></script>
 </body>
